src/test/ui/suggestions/method-on-ambiguous-numeric-type.stderr
error[E0689]: can't call method `recip` on ambiguous numeric type `{float}`
  --> $DIR/method-on-ambiguous-numeric-type.rs:12:17
   |
LL |     let x = 2.0.recip();
   |                 ^^^^^
help: you must specify a concrete type for this numeric value, like `f32`
   |
LL |     let x = 2.0_f32.recip();
   |             ^^^^^^^

error[E0689]: can't call method `recip` on ambiguous numeric type `{float}`
  --> $DIR/method-on-ambiguous-numeric-type.rs:15:15
   |
LL |     let x = y.recip();
   |               ^^^^^
help: you must specify a type for this binding, like `f32`
   |
LL |     let y: f32 = 2.0;
   |         ^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0689`.
